# zalo-for-linux

./: ARCHITECTURE.md  README.md  main.js  package-lock.json  package.json  update-window.html
.github/workflows/: build.yml
nativelibs/: builder-rust.js  builder.js
nativelibs/file-utilities/: Cargo.toml  package.json
nativelibs/file-utilities/src/: lib.rs
nativelibs/file-utils/: Cargo.toml  LICENSE  package.json
nativelibs/file-utils/src/: lib.rs
nativelibs/zimage/: .gitignore  Cargo.toml  LICENSE  package.json
nativelibs/zimage/src/: buffer_worker.rs  file_worker.rs  image_utils.rs  lib.rs  options.rs
nativelibs/zjxl/: Cargo.toml  README.md  package.json
nativelibs/zjxl/src/: image.rs  lib.rs  service.rs  types.rs
plugins/launcher-badge/: index.js
plugins/screenshot/: index.js
plugins/userscripts/: index.js  inject-menu.js  manager.css  manager.html  manager.js  preload.js
plugins/zalux/: index.js  inject.js  update-window.html  updater-inject.js
scripts/: build.js  check-versions.js  download-dmg.js  main.js  patch-main-startup.js  patch-shared-worker.js  prepare-app.js  prepare-zadark.js  setup.js
scripts/patches/: patch-auto-launch.js  patch-db-cross-v4.js  patch-file-utilities.js  patch-file-utils.js  patch-fix-image-resize-canvas.js  patch-fix-image-resize-linux.js  patch-linux-startup.js  patch-notification-badge.js  patch-pasting-img.js  patch-sqlite3.js  patch-titlebar.js  patch-zimage.js  patch-zjxl.js
