[package]
name = "file-utils"
version = "1.0.0"
edition = "2021"
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi5", "async"] }
napi-derive = "2"
libc = "0.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
