[package]
name = "zjxl"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Node-API v5 is deliberately the only Node-API level enabled.
napi = { version = "2", default-features = false, features = ["napi5"] }
napi-derive = "2"
jxl-oxide = { version = "0.12.6", default-features = false, features = ["rayon"] }
jxl-encoder = "0.1.3"
jpeg-encoder = "0.6.1"
fast_image_resize = "5.3.0"

[build-dependencies]
napi-build = "2.1.3"
